fix: alignment of buttons and text (#171) (#172)

--- a/client/src/components/DeleteChatLink/Style.module.css
+++ b/client/src/components/DeleteChatLink/Style.module.css
@@ -24,8 +24,3 @@
 .deleteButton:hover {
   background: #ab0b42;
 }
-
-.buttonPadding {
-  padding-left: 50%;
-  padding-top: 8px;
-}
